# Scrappy

./: README.md
BackEnd/music_history/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
BackEnd/music_history/app/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
BackEnd/music_history/app/management/commands/: delete_all_cards.py
BackEnd/music_history/app/migrations/: 0001_initial.py  0002_alter_card_event_date.py
BackEnd/music_history/app/templates/admin/: _form.html  scrape_history_data.html
BackEnd/music_history/app/templates/admin/app/card/: change_list.html
BackEnd/music_history/music_history/: asgi.py  settings.py  urls.py  wsgi.py
FrontEnd/music-history-frontend/: package-lock.json  package.json  requirements.txt
FrontEnd/music-history-frontend/public/: index.html
FrontEnd/music-history-frontend/src/: App.css  App.js  Routes.js
FrontEnd/music-history-frontend/src/Components/Timeline/: Timeline.css  Timeline.js
